dist/romm/Deployment.romm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: romm
  name: romm
  namespace: romm
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: romm-romm-deployment-c8fc762a
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: romm
        cdk8s.io/metadata.addr: romm-romm-deployment-c8fc762a
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: DB_HOST
              value: prod.postgres.svc.cluster.local
            - name: DB_PORT
              value: "5432"
            - name: DB_NAME
              value: romm
            - name: DB_USER
              value: romm
            - name: DB_PASSWD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: romm-db-credentials
            - name: HASHEOUS_API_ENABLED
              value: "true"
            - name: HLTB_API_ENABLED
              value: "true"
            - name: DISABLE_USERPASS_LOGIN
              value: "true"
            - name: OIDC_ENABLED
              value: "true"
            - name: OIDC_PROVIDER
              value: authentik
            - name: OIDC_CLIENT_ID
              value: fU7QdKmVDx3WeOV0UGAkUbMNAJsMOX2j7gc7ExX5
            - name: OIDC_REDIRECT_URI
              value: https://roms.cmdcentral.xyz/api/oauth/openid
            - name: OIDC_SERVER_APPLICATION_URL
              value: https://login.cmdcentral.xyz/application/o/romm
            - name: ROMM_DB_DRIVER
              value: postgresql
            - name: ROMM_PORT
              value: "8080"
            - name: REDIS_HOST
              value: romm-valkey-master
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: valkey-password
                  name: romm-valkey
            - name: SCAN_WORKERS
              value: "4"
            - name: TZ
              value: America/Chicago
            - name: ROMM_AUTH_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: ROMM_AUTH_SECRET_KEY
                  name: romm-secrets
            - name: OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: OIDC_CLIENT_SECRET
                  name: romm-secrets
            - name: STEAMGRIDDB_API_KEY
              valueFrom:
                secretKeyRef:
                  key: STEAMGRIDDB_API_KEY
                  name: romm-secrets
            - name: IGDB_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: IGDB_CLIENT_ID
                  name: romm-secrets
            - name: IGDB_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: IGDB_CLIENT_SECRET
                  name: romm-secrets
            - name: RETROACHIEVEMENTS_API_KEY
              valueFrom:
                secretKeyRef:
                  key: RETROACHIEVEMENTS_API_KEY
                  name: romm-secrets
          image: ghcr.io/rommapp/romm
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/heartbeat
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
          name: romm
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/heartbeat
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /romm
              name: pvc-data
            - mountPath: /romm/assets
              name: pvc-data
              subPath: assets
            - mountPath: /romm/config
              name: pvc-data
              subPath: config
            - mountPath: /romm/resources
              name: pvc-data
              subPath: resources
            - mountPath: /romm/library
              name: pvc-nfs-media-roms
              subPath: managed
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
        - name: pvc-nfs-media-roms
          persistentVolumeClaim:
            claimName: nfs-media-roms
            readOnly: false
