dist/romm/Service.romm-valkey-master.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: valkey
  name: romm-valkey-master
  namespace: romm
spec:
  ports:
    - name: tcp-valkey
      port: 6379
      targetPort: valkey
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: valkey
  type: ClusterIP
