dist/romm/Service.romm.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: romm-romm-deployment-c8fc762a
  type: ClusterIP
